@@ -4,3 +4,5 @@ Makefile.in
 Makefile
 stamp-cat-id
 cat-id-tbl.c
+messages
+*.pot
