@@ -1,0 +1,6 @@
+2001-10-11  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Added Swedish translation.
+	* POTFILES.in: Added files.
+	* .cvsignore: Added messages and *.pot.
+
